@@ -1968,12 +1968,15 @@ function render_report_html_item ($content, $table, $report, $mini = false) {
 			}
 			
 			if ($content['treport_custom_sql_id'] != 0) {
-				$sql = get_db_value_filter('`sql`', 'treport_custom_sql', array('id' => $content['treport_custom_sql_id']));
+				$sql = safe_output (get_db_value_filter('`sql`', 'treport_custom_sql', array('id' => $content['treport_custom_sql_id'])));
 			}
 			else {
-				$sql = $content['external_source'];
+				$sql = safe_output ($content['external_source']);
 			}
-			
+
+            // Do a security check on SQL coming from the user
+            $sql = check_sql ($sql);
+
 			$result = get_db_all_rows_sql($sql);
 			if ($result === false) {
 				$result = array();
